# modality-can-plugin

./: Cargo.toml  README.md
.github/workflows/: ci.yml
integration-test/: collector.speqtr  docker-compose.yml  go.sh  importer.speqtr  publish-test-data.py  setup-vcan0.sh  test-collector.sh  test-importer.sh  test.dbc
src/: candump.rs  convert.rs  dbc.rs  lib.rs  parser.rs  send.rs
